[package]
name = "hunter"
version = "1.1.1"
edition = "2021"
rust-version = "1.74.0"
authors = ["Nick Furfaro <furnic@skiff.com>"]
license = "MIT"

[[bin]]
name = "hunter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
dialoguer = "0.11.0"
indicatif = {version = "*", features = ["rayon"]}
prettytable-rs = "^0.10"
rand = "0.8.5"
rayon = "1.5"
regex = "1.10.2"
sled = "0.34.7"
tempdir = "0.3.7"
tempfile = "3.8.1"
tokio = { version = "1.8.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.8"
lazy_static = "1.4.0"
