[package]
name = "hunter"
version = "1.1.3"
edition = "2021"
rust-version = "1.76.0"
authors = ["Nick Furfaro <furnic@skiff.com>"]
license = "MIT"

[[bin]]
name = "hunter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
ctrlc = "3.1.0"
dialoguer = "0.11.0"
fs_extra = "1.3.0"
indicatif = {version = "*", features = ["rayon"]}
lazy_static = "1.4.0"
prettytable-rs = "^0.10"
rand = "0.8.5"
rayon = "1.5"
regex = "1.10.2"
tempfile = "3.8.1"
tokio = { version = "1.8.0", features = ["macros", "rt-multi-thread"] }
walkdir = "2.3.2"

