[package]
name = "hunter"
version = "1.1.4"
edition = "2021"
rust-version = "1.76.0"
authors = ["Nick Furfaro <furnic@skiff.com>"]
license = "MIT"

[[bin]]
name = "hunter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.0.4"
ctrlc = "3.4.5"
dialoguer = "0.11.0"
fs_extra = "1.3.0"
indicatif = {version = "0.17.9", features = ["rayon"]}
lazy_static = "1.5.0"
prettytable-rs = "^0.10"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.11.1"
tempfile = "3.14.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
walkdir = "2.5.0"

